# rust_education_v2

./: Cargo.toml  README.md  sandbox.rs
cli/: Cargo.toml
cli/src/: cli_app.rs  dapp.rs  dbg.rs  go.rs  langs.rs  lib.rs  main.rs  rust.rs
utils-types/: Cargo.toml
utils-types/src/: errors.rs  lib.rs
